--- a/latex_docu/documentation.tex
+++ b/latex_docu/documentation.tex
@@ -65,6 +65,25 @@
 %\input{01_introduction/bib.tex}
 %\input{07_database/bib.tex}
 
+\appendix
+
+\section{Imported Data Sources}
+
+\begin{table}[]
+\centering
+\caption{Data Sources}
+\label{data_sources}
+\begin{tabular}{llllll}
+ No. & Name  & Description & Measurand & Supported Data Format & URL \\
+ 1 & Weather Data Stuttgart & The source is part of the \textbf{OK Lab Stuttgart} project which includes 300 fine dust sensors. & Humidity, Temperature, Pressure &csv & luftdaten.info \\
+ 2 & Luftdaten Brandenburg & Air quality data from 28 data measuring stations in Brandenburg, Germany. & O₃, NO, NO₂, PM10, PM2.5, SO₂, CO & xls & luftdaten.brandenburg.de \\
+ 3 & Umweltbundesamt & Current air quality data from about 500 data measuring stations for 16 states and cities of Germany. & PM10, SO₂, O₃, NO₂, CO & csv &  umweltbundesamt.de \\
+ 4 & Pegel Online Water Level & Raw values of \textbf{Water Level} for internal and coastal levels of waterways of the Germany up to a maximum of 30 days & Water Level & REST, SOAP, HTTP & pegelonline.wsv.de \\
+ 5 & BLUME &  & Stickoxide, Schwefeldioxid, Schwebstaub (PM10), Benzol, Kohlenmonoxid und Ozon & HTML & http://www.berlin.de/senuvk/umwelt/luftqualitaet/de/messnetz/aktuelle_werte.shtml \\
+ 6 & BFS UV-Index &  & UV-Index & HTML & http://www.bfs.de/DE/themen/opt/uv/uv-index/aktuell/aktuell_node.html
+\end{tabular}
+\end{table}
+
 
 \end{thebibliography}
 
