--- a/latex_docu/03/doc.tex
+++ b/latex_docu/03/doc.tex
@@ -103,8 +103,7 @@ can consist of many microservices that have to be deployed one by one,
 thus it is crucial to automate the deployment process. If implemented
 correctly, a continuous-delivery-pipeline presents huge benefits not
 only for microservices. We adapted the continuous-delivery-pipeline
-introduced by Wolff{[}2{]} and customized it to fir our workflow.
-{[}ref\{\{figure Continuous-delivery-pipeline
+introduced by Wolff{[}2{]} and customized it to fit our workflow.
 (Commit-\textgreater{}local test -\textgreater{} system test
 -\textgreater{} performance test)\}\}{]}. It started with a commit onto
 GitHub and was followed by local tests. Here again the microservices
@@ -116,8 +115,7 @@ coupling of the components we were able to omit huge changes to the
 components when working in ensemble as a whole. Finally, we conducted
 performance test for the complete system to ensure high performance and
 prove scalability. Besides, the performance of single components was
-evaluated to avoid bottlenecks. More on performance tests and benchmarks
-can be found in chapter {[}ref\{benchmarking chapter\}{]}.
+evaluated to avoid bottlenecks.
 
 In addition to the challenges imposed by the deployment process,
 operating a microservice system presents its own set of challenges.
@@ -198,7 +196,13 @@ This section will discuss the decision concerning the architectural
 design on a higher level. decision for specific technologies and
 components will be presented in the following chapters. To tackle all of
 the mentioned requirements, we decided upon the following architecture
-{[}image of architecture{]}. The final architecture is formed from five
+\begin{figure}
+	\centering
+		\includegraphics[width=1.00\textwidth]{D:/documentation/images/170713_architecture4.png}
+	\caption{Final Architecture}
+	\label{fig:170713_architecture4}
+\end{figure}
+. The final architecture is formed from five
 building blocks:
 
 \begin{itemize}
@@ -222,7 +226,7 @@ are distributed by design. Moreover, as discussed earlier every building
 block should be independent from each other. Thus, every building block
 could have been developed independently and is easily exchangeable when
 necessary. The components communicate through a technology-agnostic
-interface or are seperated by a distributed messaging system. Now we
+interface or are separated by a distributed messaging system. Now we
 will discuss how we designed our building blocks to satisfy the
 presented requirements.
 
@@ -246,7 +250,7 @@ source.
 
 \subsubsection{Messaging System}\label{messaging-system}
 
-To decouple the components even further we introduced a queueing system
+To decouple the components even further we introduced a queuing system
 to transport and buffer messages between the importers and consumers.
 Since this building block is crucial to ensure scalability and should
 protect the system from workload peaks. Following the ``think big''
@@ -310,8 +314,14 @@ evolve over time when the product owners add features to the system.
 This section will present an overview of the evolution of the
 architecture and the changes done over time.
 
-The changes in architecture are depicted in figures \{\{ref figure old
-arch and new arch side by side\}\}. Basically, the architecture was
+The changes in architecture are depicted in figure 
+\begin{figure}
+	\centering
+		\includegraphics[width=1.00\textwidth]{D:/documentation/images/170713_architecture_1.png}
+	\caption{Initial Architecture}
+	\label{fig:170713_architecture_1}
+\end{figure}
+. Basically, the architecture was
 update at two places. First, the scheduling logic was exchanged. In the
 final architecture, we rely on Kubernetes and cron jobs to schedule the
 importing tasks. We decided for Kubernetes to administrate the
