--- a/latex_docu/01/doc.tex
+++ b/latex_docu/01/doc.tex
@@ -60,6 +60,15 @@ Oliver\strut
 \end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
 Removing content about Organization (moved to new document)\strut
 \end{minipage}\tabularnewline
+\begin{minipage}[t]{0.10\columnwidth}\raggedright\strut
+0.3.0\strut
+\end{minipage} & \begin{minipage}[t]{0.06\columnwidth}\raggedright\strut
+2017-07-30\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright\strut
+Oliver, Andres\strut
+\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\raggedright\strut
+Cleanup before hand-in\strut
+\end{minipage}\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -163,11 +172,6 @@ around building a prototype which provides:
 With this we aim to create a tool that generates economic and social
 value through new and creative ``layering'' of data.
 
-\texttt{//TODO} there is very little background to talk about specific
-stuff in the req's (like units \& measurements if those concepts haven't
-been introduced. Move the decomposition \& req's further down \& pull up
-the open-data \& other introductory text about our domain here)
-
 \subsubsection{Building Blocks}\label{building-blocks}
 
 The problem domain can be decomposed into the following architectural
@@ -243,10 +247,6 @@ The above objectives translate into the following requirements:
 \end{enumerate}
 
 \subsubsection{Public API}\label{public-api}
-
-\texttt{TODO} prob just the Scalability \& fault tolerance concerns
-already mentioned under General, so not sure what reqs we had for the
-API individually (if any)\ldots{}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
