--- a/latex_docu/04/doc.tex
+++ b/latex_docu/04/doc.tex
@@ -1,13 +1,11 @@
 \section{Infrastructure}\label{infrastructure}
 
-\textbf{Authorship} Written by Andres
-
-\subsection{Overview/Description (if applicable
-Motivation)}\label{overviewdescription-if-applicable-motivation}
+\textbf{Authorship} Written by Andres Component developed by Amer
 
 Needless to say, infrastructure plays a critical role in any cloud-based
-system. Despite the critical nature of the availability of
-infrastructure to a cloud prototyping
+system. In this section, we will discuss the requirements which were
+specific to the choice of cloud platform and orchestration as well as
+all activities surrounding deployment to the cloud.
 
 \subsection{Requirements}\label{requirements}
 
@@ -31,9 +29,6 @@ In addition, the general requirements for the system with regards to
 scalability, performance, etc. also apply to this component, as
 mentioned.
 
-\subsection{Survey of Existing Solutions (available
-implementations)}\label{survey-of-existing-solutions-available-implementations}
-
 \subsection{Evaluation Criteria \& Decision-making
 Process}\label{evaluation-criteria-decision-making-process}
 
@@ -50,6 +45,11 @@ seem like a good use of our time.
 
 \subsubsection{Orchestration}\label{orchestration}
 
+Originally an internal Google project, Kubernetes was opensourced via a
+donation to the Cloud Native Computing Foundation (CNCF). Among others,
+its core functionality includes support for deployment, maintenance, and
+scalability of applications.
+
 \subsection{Implementation Details}\label{implementation-details}
 
 \subsubsection{Orchestration}\label{orchestration-1}
@@ -58,9 +58,35 @@ Given its prominence in the cloud arena and the fact that it is open
 source software, we used Kubernetes for orchestration of cloud
 components. Having containerized data importers was a requirement from
 early on in order to accomplish scalability, and Kubernetes supports the
-creation and monitoring of containers natively. In addition, the
-building blocks of our architecture such as the queue and the database,
-which must be guaranteed to be up and running
+creation and monitoring of containers natively via its \emph{Pod}
+abstraction. In addition, the building blocks of our architecture such
+as the queue and the database, which must be guaranteed to be up and
+running, were declared as Kubernetes \emph{Services}, which provide
+additional self-healing, should these critical components crash.
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=1.00\textwidth]{https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Kubernetes.png/600px-Kubernetes.png}
+\caption{}
+\end{figure}
+
+Additionally, internal DNS provides ease-of-use by being able to refer
+to components by a friendly name as opposed to IP addresses. As
+mentioned in the Architecture section, scheduling was realized via
+simple cron job.
+
+Finally, in addition to the command-line interface provided by kops, a
+state-of-the-art web interface is provided out-of-the-box, making for a
+superior user experience.
+
+\subsubsection{Configuration}\label{configuration}
+
+One of the main advantages of Kubernetes is the ability to specify
+behavior of common abstractions via configuration alterable at run-time
+rather than by having to program components responsible for carrying out
+hard-coded logic. Configuration is provided by YAML files for
+registering crons, data importer job runtime configuration, and
+service-specific configuration necessary for inter-node communication.
 
 \subsubsection{Deployment Automation}\label{deployment-automation}
 
@@ -78,10 +104,4 @@ Spot instances also played an important role in keeping to the budget,
 and support for these were was integrated into the scripts, which
 allowed us to monitor and specify the price for spot instances.
 
-\subsection{Evolution of Component during development (Reasons for the
-changes)}\label{evolution-of-component-during-development-reasons-for-the-changes}
-
-\subsection{Discussion/Analysis/Limitations}\label{discussionanalysislimitations}
-
-\subsection{Future
-Development/Enhancements}\label{future-developmentenhancements}
+\subsection{Discussion}\label{discussion}
