--- a/latex_docu/05/doc.tex
+++ b/latex_docu/05/doc.tex
@@ -253,7 +253,7 @@ application. We will look at each component individually.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/components_diagram.png}
+\includegraphics[width=1.00\textwidth]{images/components_diagram.png}
 \caption{image-title-here}
 \end{figure}
 
@@ -303,7 +303,7 @@ application. We will look at each component individually.
   functions for creating a json string according to our defined schema.
 \end{itemize}
 
-\includegraphics{images/domain_model.png} \textbf{Figure 2.} shows a
+\includegraphics[width=1.00\textwidth]{images/domain_model.png} \textbf{Figure 2.} shows a
 more detailed view of classes inside a simple flat file importer and how
 they are related together.
 
