--- a/latex_docu/05a/doc.tex
+++ b/latex_docu/05a/doc.tex
@@ -219,8 +219,7 @@ he wants to, as he only needs to know the main unit.
 
 A big advantage of our approach is, that we kind of crowd-source the
 implementation of converters by this, as it happens during the ETL phase
-while importing (See //TODO ref chapter unit conversion) a source. This
-gives us a chance to achieve the following:
+while importing a source. This gives us a chance to achieve the following:
 
 \begin{itemize}
 \tightlist
@@ -239,7 +238,3 @@ gives us a chance to achieve the following:
   would not guarantee the reusability as importers and our database
   frontend depend on totally different things.
 \end{itemize}
-
-\subsection{Future Improvements}\label{future-improvements}
-
-//TODO
