--- a/latex_docu/08_web_mgmt/doc.tex
+++ b/latex_docu/08_web_mgmt/doc.tex
@@ -82,7 +82,7 @@ useful for our system:
 
 \begin{figure}
 \centering
-\includegraphics{images/new_datasource.png}
+\includegraphics[width=1.00\textwidth]{images/new_datasource.png}
 \caption{Registering a data source within the Web management platform}
 \end{figure}
 
@@ -315,7 +315,7 @@ were then:
 
 \begin{figure}
 \centering
-\includegraphics{images/relational_schema.png}
+\includegraphics[width=1.00\textwidth]{images/relational_schema.png}
 \caption{UML Class-Diagram of the Relational Management System.}
 \end{figure}
 
@@ -497,7 +497,7 @@ be directly converted to each other. // TODO ref picture
 
 \begin{figure}
 \centering
-\includegraphics{images/unit_frontend.png}
+\includegraphics[width=1.00\textwidth]{images/unit_frontend.png}
 \caption{Screenshot of the units of a unit category on the web
 management platform. You can see the main unit and have a notation on
 what the units express.}
