--- a/latex_docu/02/doc.tex
+++ b/latex_docu/02/doc.tex
@@ -13,10 +13,6 @@ Talend\tabularnewline
 \bottomrule
 \end{longtable}
 
-\begin{verbatim}
-//TODO diagram illustrating the pipeline to better describe where each company is positioned
-1.
-\end{verbatim}
 
 \subsection{OpenSensors.io}\label{opensensors.io}
 
@@ -75,7 +71,7 @@ includes hardware providers and manufacturing firms.
 \begin{itemize}
 \tightlist
 \item
-  \textbf{Customers} (TODO)
+  \textbf{Customers}
 \item
   \textbf{Partners} are hardware manufacturers and design firms (OEMs)
   looking to deliver client projects
@@ -120,7 +116,6 @@ messages for 300 million unique devices per month.
 
 https://www.talend.com/resource/sensor-data/
 
-Talend is //TODO
 
 \subsubsection{Features}\label{features-2}
 
