--- a/latex_docu/03/doc.tex
+++ b/latex_docu/03/doc.tex
@@ -198,7 +198,7 @@ components will be presented in the following chapters. To tackle all of
 the mentioned requirements, we decided upon the following architecture
 \begin{figure}
 	\centering
-		\includegraphics[width=1.00\textwidth]{D:/documentation/images/170713_architecture4.png}
+		\includegraphics[width=1.00\textwidth]{images/170713_architecture4.png}
 	\caption{Final Architecture}
 	\label{fig:170713_architecture4}
 \end{figure}
@@ -317,7 +317,7 @@ architecture and the changes done over time.
 The changes in architecture are depicted in figure 
 \begin{figure}
 	\centering
-		\includegraphics[width=1.00\textwidth]{D:/documentation/images/170713_architecture_1.png}
+		\includegraphics[width=1.00\textwidth]{images/170713_architecture_1.png}
 	\caption{Initial Architecture}
 	\label{fig:170713_architecture_1}
 \end{figure}
