--- a/latex_docu/07/doc.tex
+++ b/latex_docu/07/doc.tex
@@ -149,7 +149,7 @@ nodes, with two replicas per index.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/07_database_architecture_elastic.png}
+\includegraphics[width=1.00\textwidth]{images/07_database_architecture_elastic.png}
 \caption{OpenData Database Architecture}
 \end{figure}
 
@@ -266,7 +266,7 @@ different replica. This can be flexible in- or decreased later on.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/07_database_architecture.png}
+\includegraphics[width=1.00\textwidth]{images/07_database_architecture.png}
 \caption{OpenData Database Architecture}
 \end{figure}
 
@@ -410,7 +410,7 @@ instances with.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{images/07_API_Architecture.png}
+\includegraphics[width=1.00\textwidth]{images/07_API_Architecture.png}
 \caption{image-title-here}
 \end{figure}
 
