--- a/latex_docu/04/doc.tex
+++ b/latex_docu/04/doc.tex
@@ -66,7 +66,7 @@ additional self-healing, should these critical components crash.
 
 \begin{figure}[htbp]
 \centering
-\includegraphics[width=1.00\textwidth]{https://upload.wikimedia.org/wikipedia/commons/thumb/b/be/Kubernetes.png/600px-Kubernetes.png}
+\includegraphics[width=1.00\textwidth]{images/Kubernetes.png}
 \caption{}
 \end{figure}
 
